# useful_code

./: .pre-commit-config.yaml  README.md  my_python.py  pyproject.toml  requirements.txt  tox.ini
src/ts/: missing_data.py  naive_benchmark.py
tests/: test_missing_data.py  test_naive_benchmark.py
