[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mypackage"
description = "My package description"
readme = "README.md"
requires-python = ">=3.9"
version = "0.0.1"
dependencies = [
    "pandas",
    'numpy',
    'sklearn',
    'pytest',
]

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "pytest-cov"]

[tool.pytest.ini_options]
addopts = "--cov=ts"
testpaths = [
    "tests",
]

[tool.black]
line-length = 100